--- a/helm/prod.yaml
+++ b/helm/prod.yaml
@@ -3,3 +3,5 @@ service_type: ClusterIP
 targetPort: 8080
 PARAMETERS: "cart.prod.redishost,REDIS_HOST cart.prod.cataloguehost,CATALOGUE_HOST cart.prod.catalogueport,CATALOGUE_PORT"
 env: prod
+schema:
+  enabled: false
